<resources>
    <string name="app_name">YandereAudio</string>
    <string name="kernel_service_control">Kernel settings</string>
    <string name="yandere_audio_service_control">YandereAudio service control</string>
    <string name="navigation_drawer_open"> </string>
    <string name="navigation_drawer_close"> </string>
    <string name="security_error">YandereAudio will close because the security conditions are not given.</string>
    <string name="service_name">YandereAudio service</string>
    <string name="title_activity_kernel">Kernel settings</string>
    <string name="title_activity_universal">Universal management</string>
    <string name="title_activity_sony">Sony management</string>
    <string name="heavybass_description">An SRS Re-callibration to output more bass from your headphones</string>
    <string name="heavybass_title">Heavybass mode</string>
    <string name="pdesireaudio_uhqa_description">Set your soundcard to the PDesireAudio Ultra High Quality Mode</string>
    <string name="pdesireaudio_uhqa_title">Ultra High Quality Mode</string>
    <string name="pdesireaudio_static_description">Gives you full control to PDesireAudio</string>
    <string name="pdesireaudio_static_title">Static mode</string>
    <string name="pref_header_audio_settings">Audio settings</string>
    <string name="pref_header_engines">Configure engines</string>
    <string name="pref_header_credits">Credits</string>
    <string name="pref_header_pdesireaudio_controls">PDesireAudio settings</string>
    <string name="pref_header_pdesireaudio_credits">Other</string>
    <string name="pref_header_yuno_gasaiq_controls">Yuno-GasaIQ settings</string>
    <string name="main_author_description">Tristan Marsell (PDesire)</string>
    <string name="main_author_title">Main author</string>
    <string name="special_author_title">Special credits</string>
    <string name="team_author_description">Team DevElite</string>
    <string name="team_author_title">Development team</string>
    <string name="sound_enhance_strings_v4a_title_txt">VIPER4Android®</string>
    <string name="sound_enhance_strings_v4a_desc_txt">Customize your audio output how you want</string>
    <string name="credits_title">Credits</string>
    <string name="credits">All credits go to PDesire and the DevElite team.</string>
    <string name="credits_pdesireaudio">All credits go to PDesire</string>
    <string name="pdesireaudio_found">PDesireAudio found on your kernel</string>
    <string name="pdesireaudio_not_found">PDesireAudio not found on your kernel</string>
    <string name="meli_not_installed">Project Shinka-PD not found</string>
    <string name="no_project_meli_installed">You do not have Project Shinka-PD installed, or did not install it properly. Please download the latest version from the Project Shinka-PD XDA thread.</string>
    <string name="go_to_thread">Go to thread</string>
    <string name="ignore">Ignore</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ensure_restart">Are you sure you want to restart your phone?</string>
    <string name="ensure_restart_description">Are you sure you want to restart your phone?</string>
    <string name="xda_thread">XDA thread</string>
    <string name="support">Support</string>
    <string name="contact_pdesire_xda">Contact PDesire on XDA</string>
    <string name="kernel">Kernel</string>
    <string name="soundmod">Soundmod</string>
    <string name="basic_theme">Basic theme</string>
    <string name="new_theme">New theme</string>
    <string name="theme">Theme</string>
    <string name="yume_audio">YumeAudio configuration</string>
    <string name="yume_audio_description">The old but best configuration of Project Yume.\nApply this if you feel nostalgic and want to hear something old but wonderful.\nAttention: Your phone will restart!</string>
    <string name="meli_audio">Shinka-PD Y configuration</string>
    <string name="meli_audio_description">New, better, and more powerful.\nThe Shinka-PD Y Config is for people who want audio without any compromises. \nThis gets updated with every Project Shinka-PD version and is already enabled by default.\nAttention: Your phone will restart.</string>
    <string name="sony_management">Sony management</string>
    <string name="universal_management">Universal management</string>
    <string name="device_management">Device management</string>
    <string name="htc_callibration">HTC device calibration</string>
    <string name="supported_eq">Supported equalizers</string>
    <string name="sse_callibration">SoundEnhancement calibration</string>
    <string name="ssr_sony_callibration">Sony Surround Recording calibration</string>
    <string name="vendor_htc_audio">Vendoring HTC audio effects</string>
    <string name="etc_htc_audio">Etcing HTC audio effects</string>
    <string name="meli_htc_audio">Project Meli HTC audio effects</string>
    <string name="vendor_htc_audio_description">Sets the htc_audio_effects.conf file similar to the vendor audio_effects.conf file</string>
    <string name="etc_htc_audio_description">Sets the htc_audio_effects.conf file similar to the etc audio_effects.conf file</string>
    <string name="meli_htc_audio_description">Sets the htc_audio_effects.conf file to PDesire\'s modified one</string>
    <string name="pdesire_clearaudio">PDesire\'s ClearAudio</string>
    <string name="pdesire_clearaudio_description">PDesire\'s own calibration of ClearAudio</string>
    <string name="bass_clearaudio">Bassing ClearAudio</string>
    <string name="bass_clearaudio_description">Sets up the bass on ClearAudio</string>
    <string name="treble_clearaudio">Trebling ClearAudio</string>
    <string name="treble_clearaudio_description">Increases the treble on ClearAudio</string>
    <string name="htc_ssr_description">Use the HTC SSR implementation</string>
    <string name="htc_ssr">HTC SSR</string>
    <string name="pdesire_ssr_description">Use PDesire\'s SSR implementation</string>
    <string name="pdesire_ssr">PDesire SSR</string>
    <string name="ssr">Surround Sound Recording (SSR)</string>
    <string name="clearaudio">ClearAudio</string>
    <string name="htc_audio_effects">HTC Audio Effects</string>
    <string name="settings">Settings</string>
    <string name="yandere_settings">Yandere settings</string>
    <string name="heavybass_enabled">Heavybass enabled</string>
    <string name="heavybass_enabled_description">I have enabled Heavybass for you</string>
    <string name="heavybass_disabled">Heavybass disabled</string>
    <string name="heavybass_disabled_description">I have disabled Heavybass for you</string>
    <string name="pdesireaudio_disabled">PDesireAudio disabled</string>
    <string name="pdesireaudio_enabled">PDesireAudio enabled</string>
    <string name="pdesireaudio_enabled_description">PDesireAudio is enabled. Let\'s rock your phone!</string>
    <string name="pdesireaudio_disabled_description">PDesireAudio is disabled. Maybe  it\'s too much for you…</string>
    <string name="pdesire_clearaudio_enabled">PDesire\'s ClearAudio enabled</string>
    <string name="pdesire_clearaudio_enabled_description">PDesire\'s ClearAudio is now enabled. He has put much effort into this. I hope you enjoy it!</string>
    <string name="treble_clearaudio_enabled">Treble ClearAudio enabled</string>
    <string name="treble_clearaudio_enabled_description">Treble ClearAudio is enabled. So, so, sharp!</string>
    <string name="bass_clearaudio_enabled">Bass ClearAudio enabled</string>
    <string name="bass_clearaudio_enabled_description">Bass ClearAudio is enabled. Whoa, that bass is whooming!</string>
    <string name="pdesire_ssr_enabled_description">PDesire\'s Surround Sound Recording is enabled. Whoa, it feels so real!</string>
    <string name="pdesire_ssr_enabled">PDesire\'s Surround Sound Recording Enabled</string>
    <string name="htc_ssr_enabled_description">HTC Surround Sound Recording is enabled. Many people hate HTC, but HTC knows how to utilize audio correctly.</string>
    <string name="htc_ssr_enabled">HTC Surround Sound Recording Enabled</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_back_description">Welcome back to Project Shinka-PD</string>
    <string name="welcome_back_yandereaudio">Welcome back to YandereAudio</string>
    <string name="hello_yandere">Hello, I am YandereAudio ^-^</string>
    <string name="hello_yandere_description">I am YandereAudio, your personal assistant for Project Shinka-PD, hihi ^~^ \nI was created by PDesire as a replication of his personality in Project Shinka-PD. \nHe coded me to assist you while calibrating Project Meli. \nI hope it is okay for you that I call you master :3 \nAre you ready for fantastic audio? ^~^</string>
    <string name="never_show_again">Never show again</string>
    <string name="info_analytics">Info about analytics</string>
    <string name="google_analytics">Google Firebase analytics</string>
    <string name="google_analytics_description">Enable anonymous analytics. This will help PDesire what features should be improved. Any data will be kept private and secure.</string>
    <string name="fabric_analytics">Fabric.io analytics</string>
    <string name="fabric_analytics_description">Enable anonymous analytics and crashlytics. This will help PDesire how to improve this app. Any data will be kept private and secure.</string>
    <string name="analytics">Analytics</string>
    <string name="about_firebase_analytics">About Google Firebase analytics</string>
    <string name="about_firebase_analytics_description">Google Firebase analytics is a service by Google to provide analytics from this app. \nThe following will be logged: Your gender, device, Android version, which country you are living in and what you are doing in this app. \This data will be saved on Google servers and I only have access to the named data. \nI warrant that any of the named data will be kept private and is only for improving Project Meli. \nYou will not get spied on nor will this data be used for payments. \nAs a proof, you can take a look on the source code of this app.</string>
    <string name="about_fabric_analytics">About Fabric.io Realtime Analytics/Crashlytics</string>
    <string name="project_shinka_pd_for_xperia">Project Shinka-PD for Xperia</string>
    <string name="the_hi_fi_power_of_xperia_together_with_project_shinka_pd_unleashes_perfect_audio_performance">The Hi-Fi power of Xperia together with Project Shinka-PD unleashes perfect audio performance.</string>
    <string name="project_shinka_pd_for_pixel">Project Shinka-PD for Google Pixel</string>
    <string name="the_perfection_made_by_google_llc_with_project_shinka_pd_is_the_perfect_combination_for_your_music_lifestyle">The perfection made by Google with Project Shinka-PD is the perfect combination for your music lifestyle!</string>
    <string name="yuno_gasaiq_kernel_audio_project">Yuno-GasaIQ kernel audio project</string>
    <string name="get_the_maximum_out_of_your_qualcomm_dac_with_just_a_modified_kernel_driver">Get the maximum out of your Qualcomm DAC with just a modified kernel driver. Ask your kernel developer for implementing Yuno-GasaIQ kernel driver first though.</string>
    <string name="project_shinka_pd_for_everyone">Project Shinka-PD for Everyone</string>
    <string name="the_unique_audio_procession_by_project_shinka_pd_for_everyone">The unique audio processing by Project Shinka-PD for everyone</string>
    <string name="project_shinka_pd_telegram_community">Project Shinka-PD Telegram community</string>
    <string name="we_are_project_shinka_pd_join_our_community_on_telegram_now">We are Project Shinka-PD. Join our community on Telegram now.</string>
</resources>