<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/soundmod">
        <menu>
            <item
                android:id="@+id/nav_service"
                android:icon="@drawable/ic_headset_black_24dp"
                android:title="@string/yandere_audio_service_control"/>
        </menu>
    </item>

    <item android:title="@string/kernel">
        <menu>
            <item
                android:id="@+id/nav_pdesireaudio"
                android:icon="@drawable/ic_whatshot_black_24dp"
                android:title="@string/pdesireaudio_service_control"/>
        </menu>
    </item>

    <item android:title="@string/device_management">
        <menu>
            <item
                android:id="@+id/universal_management"
                android:icon="@drawable/ic_universal_black_24dp"
                android:title="@string/universal_management"/>

            <item
                android:id="@+id/sony_management"
                android:icon="@drawable/ic_sony_black_24dp"
                android:title="@string/sony_management"/>
        </menu>
    </item>

    <item android:title="@string/theme">
        <menu>
            <item
                android:id="@+id/basic_theme"
                android:icon="@drawable/ic_contact_outline_black_24dp"
                android:title="@string/basic_theme"/>

            <item
                android:id="@+id/new_theme"
                android:icon="@drawable/ic_chat_bubble_black_24dp"
                android:title="@string/new_theme"/>
        </menu>
    </item>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_contact_xda"
                android:icon="@drawable/ic_question_answer_black_24dp"
                android:title="@string/xda_thread"/>

            <item
                android:id="@+id/nav_contact_pdesire"
                android:icon="@drawable/ic_chat_black_24dp"
                android:title="@string/contact_pdesire_xda"/>
        </menu>
    </item>

</menu>
