<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/clearaudio" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="treble_clearaudio_switch"
        android:summary="@string/treble_clearaudio_description"
        android:title="@string/treble_clearaudio" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="bass_clearaudio_switch"
        android:summary="@string/bass_clearaudio_description"
        android:title="@string/bass_clearaudio" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pdesire_clearaudio_switch"
        android:summary="@string/pdesire_clearaudio_description"
        android:title="@string/pdesire_clearaudio" />

</PreferenceScreen>
