<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/analytics" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="analytics_switch"
        android:summary="@string/google_analytics_description"
        android:title="@string/google_analytics" />

    <Preference
        android:key="analytics_help"
        android:title="@string/info_analytics" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="analytics_switch_fabric"
        android:summary="@string/fabric_analytics_description"
        android:title="@string/fabric_analytics" />

    <Preference
        android:key="analytics_help_fabric"
        android:title="@string/info_analytics" />

</PreferenceScreen>
