<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- IMPLEMENTATION OF 3RD PARTY apps, PLEASE DON'T REMOVE THIS -->

    <PreferenceScreen android:title="@string/sound_enhance_strings_v4a_title_txt" android:summary="@string/sound_enhance_strings_v4a_desc_txt" android:key="v4a">
        <intent android:targetPackage="com.audlabs.viperfx" android:action="android.intent.action.MAIN" android:targetClass="com.audlabs.viperfx.main.MainActivity" />
    </PreferenceScreen>

    <!-- END OF IMPLEMENTATION -->

    <PreferenceCategory android:title="Heavybass Mode" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="heavybass_switch"
        android:summary="@string/heavybass_description"
        android:title="@string/heavybass_title" />


    <PreferenceCategory android:title="" />
    <Preference
        android:defaultValue="true"
        android:key="reboot_click"
        android:summary="It's required to Reboot the System if you changed something on the settings"
        android:title="Reboot System" />

</PreferenceScreen>
