<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="projectmeli.yandereaudio.pdesire.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:id="@+id/title_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/title_to_card_margin"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textSize="@dimen/title_text_size" />

        <android.support.v7.widget.CardView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_divider"
            android:layout_below="@id/title_big"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_round_value">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="false"
                android:background="@drawable/background_xperia">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/card_text_background">

                    <TextView
                        android:id="@+id/title_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:maxLines="3"
                        android:padding="@dimen/card_title_padding"
                        android:textColor="@color/card_title_color"
                        android:text="@string/project_shinka_pd_for_xperia"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_intro"
                        android:maxLines="3"
                        android:padding="@dimen/card_desc_padding"
                        android:text="@string/the_hi_fi_power_of_xperia_together_with_project_shinka_pd_unleashes_perfect_audio_performance"
                        android:textColor="@color/card_desc_color"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/secd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_divider"
            android:layout_below="@id/intro"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_round_value">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="false"
                android:background="@drawable/background_pixel">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/card_text_background">

                    <TextView
                        android:id="@+id/title_secd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:maxLines="3"
                        android:padding="@dimen/card_title_padding"
                        android:textColor="@color/card_title_color"
                        android:text="@string/project_shinka_pd_for_pixel"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_secd"
                        android:maxLines="3"
                        android:padding="@dimen/card_desc_padding"
                        android:text="@string/the_perfection_made_by_google_llc_with_project_shinka_pd_is_the_perfect_combination_for_your_music_lifestyle"
                        android:textColor="@color/card_desc_color"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/thrd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_divider"
            android:layout_below="@id/secd"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_round_value">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="false"
                android:background="@drawable/background_yandere">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/card_text_background">

                    <TextView
                        android:id="@+id/title_thrd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:maxLines="3"
                        android:padding="@dimen/card_title_padding"
                        android:textColor="@color/card_title_color"
                        android:text="@string/project_shinka_pd_for_everyone"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_thrd"
                        android:maxLines="3"
                        android:padding="@dimen/card_desc_padding"
                        android:text="@string/the_unique_audio_procession_by_project_shinka_pd_for_everyone"
                        android:textColor="@color/card_desc_color"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_divider"
            android:layout_below="@id/thrd"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_round_value">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="false"
                android:background="@drawable/background_yandere">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/card_text_background">

                    <TextView
                        android:id="@+id/title_fth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:maxLines="3"
                        android:padding="@dimen/card_title_padding"
                        android:textColor="@color/card_title_color"
                        android:text="@string/yuno_gasaiq_kernel_audio_project"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_fth"
                        android:maxLines="3"
                        android:padding="@dimen/card_desc_padding"
                        android:text="@string/get_the_maximum_out_of_your_qualcomm_dac_with_just_a_modified_kernel_driver"
                        android:textColor="@color/card_desc_color"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fifth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_size"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_divider"
            android:layout_below="@id/fth"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_round_value">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="false"
                android:background="@drawable/background_telegram">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/card_text_background">

                    <TextView
                        android:id="@+id/title_fifth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="false"
                        android:maxLines="3"
                        android:padding="@dimen/card_title_padding"
                        android:textColor="@color/card_title_color"
                        android:text="@string/project_shinka_pd_telegram_community"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_fifth"
                        android:maxLines="3"
                        android:padding="@dimen/card_desc_padding"
                        android:text="@string/we_are_project_shinka_pd_join_our_community_on_telegram_now"
                        android:textColor="@color/card_desc_color"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>
